--- a/index.html
+++ b/index.html
@@ -11,6 +11,34 @@
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
-    
+    <div class="calculator">
+
+        <div class="display">
+            <div class="smallDisplay">2 +</div>
+            <div class="mainDisplay">4</div>
+        </div>
+
+        <div class="pad">
+            <div class="clear">Clear</div>
+            <div class="backspace">Backspace</div>
+            <div class="seven number">7</div>
+            <div class="eight number">8</div>
+            <div class="nine number">9</div>
+            <div class="multiply operator">*</div>
+            <div class="four number">4</div>
+            <div class="five number">5</div>
+            <div class="six number">6</div>
+            <div class="subtract operator">-</div>
+            <div class="one number">1</div>
+            <div class="two number">2</div>
+            <div class="three number">3</div>
+            <div class="add operator">+</div>
+            <div class="divide operator">/</div>
+            <div class="zero number">0</div>
+            <div class="point number">.</div>
+            <div class="equals operator">=</div>
+        </div>
+        
+    </div>
 </body>
 </html>
