Display number on calculator

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="calculator">
 
         <div class="display">
-            <div class="smallDisplay">2 +</div>
-            <div class="mainDisplay">4</div>
+            <div class="smallDisplay"></div>
+            <div class="mainDisplay"></div>
         </div>
 
         <div class="pad">
