Add calculate functions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="divide operator">/</div>
             <div class="zero number">0</div>
             <div class="point number">.</div>
-            <div class="equals operator">=</div>
+            <div class="equals">=</div>
         </div>
         
     </div>
